completed hazard section

--- a/catalog.tex
+++ b/catalog.tex
@@ -8,7 +8,9 @@
 
 \section{Seismic Catalog}
 
-A fundamental step in regional seismic hazard analysis is the compilation of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Nowadays, instrumental datasets are easily accessible through international, regional, and local agencies. Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{Ambraseys_1982_Book}, \citet{moinfar1994}, and \citet{Berberian_1995_Tech}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. 
+\subsection{Composition}
+
+A fundamental step in regional seismic hazard analysis is the composition of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Nowadays, instrumental datasets are easily accessible through international, regional, and local agencies. Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{Ambraseys_1982_Book}, \citet{moinfar1994}, and \citet{Berberian_1995_Tech}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. 
 
 According to \citet{Ambraseys_1982_Book}, there is evidence of earthquakes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). Most ground motion prediction equations employed today in seismic hazard, however, use moment magnitude ($M_w$) instead. 
 
@@ -22,6 +24,9 @@ In terms of magnitude scale, the events in \citet{Zare2014} were converted from 
 
 Selection and declustering was also done in consistence with the original catalog, using the methods by \citet{Gardner1974}, \citet{Reasenberg1985} and \citet{Uhrhammer_1986_EN}. We obtained the declustered version of \citet{Zare2014}, selected 7,478 earthquakes within our region of interest, and removed 605 foreshocks and 2,917 aftershocks, leaving only those events in agreement with a Poissonian model. The same procedure was used for the added events between 2000 and 2015. These steps altogether allowed us to preserve compatibility with the original catalog while also including the most recent events. The final set of events compiled for this study is shown in Fig.~\ref{fig:catalog}.
 
+\subsection{Completeness}
+
+\textcolor{red}{We will bring the completeness section here.}
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
