re-organized titles and files

--- a/hazard.tex
+++ b/hazard.tex
@@ -1,5 +1,5 @@
 
-\section{Approach to Seismic Hazard}
+\section{Seismic Hazard Approach}
 
 There have been multiple assessments of seismic hazard for Iran. A brief report on the most recent review done to define the hazard zoning map of Iran included in the Iranian seismic code \citep{BHRC2014} can be found in \citet{Moinfar_2012_WCEE}. Other previous efforts include, for instance, the work of \citet{Tavakoli1999}, who presented iso-acceleration contour lines and seismic hazard zonation for Iran based on known major fault-lines and area-source models; the results obtained by \citet{Ghodrati2003}, who presented a refined hazard assessment for the metropolitan area of Tehran using a logic tree approach to combine results from three attenuation relationships; and the recent study by \citet{Khodaverdian_2016_BSSA}, who used a smoothed seismicity approach to estimate spatially variable seismicity parameters for the whole country.
 
